--- a/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/drawable/deliver.xml
+++ b/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/drawable/deliver.xml
@@ -2,10 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:left="16dp"
-        android:right="16dp">
+        android:left="1dp"
+        android:right="1dp">
         <shape android:shape="rectangle" >
-            <solid android:color="#ffdddddd" />
+            <solid android:color="#F5F5F5" />
         </shape>
     </item>
 
