--- a/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/layout/activity_login.xml
+++ b/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:src="@mipmap/lago"/>
+            android:src="@mipmap/logo001"/>
         <EditText
             android:id="@+id/user"
             android:hint="账号"
