--- a/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/drawable/sharp.xml
+++ b/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/drawable/sharp.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ff0000ff"/>
-    <stroke android:width="1dp" android:color="#000000" />
+    <solid android:color="#0080FF"/>
+    <stroke android:width="1dp" android:color="#0080FF" />
     <gradient
-        android:startColor="#FFFFFF"
-        android:endColor="#FFFFFF"/>
+        android:startColor="#0080FF"
+        android:endColor="#0080FF"/>
     <padding android:left="7dp"
         android:top="7dp"
         android:right="7dp"
