--- a/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/values/colors.xml
+++ b/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#009393</color>
+    <color name="colorPrimaryDark">#009393</color>
     <color name="colorAccent">#FF4081</color>
     <!--Zxing相关-->
     <color name="contents_text">#ff000000</color>
