替换为优尚版本 修改名称、ICON、登录图片、数据库

--- a/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/layout/activity_login.xml
+++ b/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
     android:textSize="20sp"
     android:background="@color/colorPrimary"
     android:textColor="@android:color/white"
-    android:text="优力订单系统登录"/>
+    android:text="优尚订单系统登录"/>
     <LinearLayout
         android:padding="10dp"
         android:id="@+id/l1"
@@ -22,11 +22,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
             android:layout_gravity="center"
-            android:src="@mipmap/logo001"/>
+            android:src="@mipmap/youshang"
+            />
         <EditText
+            android:layout_marginTop="20dp"
             android:id="@+id/user"
             android:hint="账号"
             android:layout_width="match_parent"
